BUG-FIX: Fixed footer alignment and Order Status Tracker SVG

--- a/Frontend/Static/styles/Help_Center.css
+++ b/Frontend/Static/styles/Help_Center.css
@@ -155,44 +155,49 @@ select {
     color: #555;
 }
 
-/*footer*/
-
+/* Footer */
 footer {
-    background: #333;
-    color: #fff;
-    display: flex;
-    justify-content: space-between;
-    position: relative;
-    bottom: 0;
-    left: 0;
-    right: 0;
-  }
-  
-  .footer-left {
-    width: 80%;
-  }
-  
-  .footer-left h3 {
-    font-size: 1rem;
-    font-weight: bold;
-    margin-bottom: 1rem;
-    margin-left: 0.5em;
-  }
-  
-  .footer-left p {
-    margin-bottom: 0.5rem;
-    margin-left: 0.5em;
-  }
-  
-  .footer-right a {
-    display: block; 
-    color: #fff;
-    margin-top: 1em;
-  } 
-  
-  .footer-right a:hover {
-    text-decoration: underline;
-  }
+  background-color: rgb(240, 240, 240);
+  color: rgb(10, 10, 10);
+  text-align: center;
+  padding: 10px;
+  display: flex;
+  justify-content: space-between;
+}
+
+.footer-left {
+  flex: 1;
+  text-align: left;
+  margin-bottom: 10px;
+}
+
+.footer-left h3 {
+  margin-bottom: 10px;
+}
+
+.footer-left p {
+  margin: 0;
+  font-size: 70%;
+}
+
+.footer-left p + p {
+  margin-top: 0.5em;
+}
+
+
+.footer-right {
+  margin-top: 3%;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 10px;
+  font-size: 70%;
+}
+
+.footer-right a {
+  color: rgb(6, 6, 6);
+  text-decoration: none;
+}
   
   /* Mobile */
   
