--- a/Frontend/Static/styles/Profile.css
+++ b/Frontend/Static/styles/Profile.css
@@ -76,7 +76,7 @@ nav a img {
   position: absolute;
   left: 13px;
   top: 161px; 
-  width: 200px;
+  width: 248px;
   bottom:120px;
   box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
 } 
@@ -136,8 +136,8 @@ nav a img {
   margin-bottom: 2%;
   margin-top: 2%; 
   margin-right: 2%;
-  margin-left: 17%;
-  width:70%;
+  margin-left: 20%;
+  width:65%;
   border-radius: 10px; 
   box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
 }
